try a fix for buttons on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ body {
 }
 
 .rate-btn {
+  -webkit-border-radius: 100%;
   font-size: 1.5rem;
   color: hsl(217, 12%, 63%);
   border: none;
